--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/ssr": "^0.5.2",
@@ -19,8 +20,10 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "next": "14.2.22",
+    "openai": "^4.85.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
