--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "lucide-react": "^0.475.0",
     "next": "14.2.22",
     "openai": "^4.85.4",
+    "pdfjs-dist": "^5.0.375",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
