--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "next": "14.2.22",
     "openai": "^4.85.4",
     "pdfjs-dist": "^5.0.375",
+    "radix-ui": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.0.0",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.0",
     "uuid": "^11.1.0",
